--- a/index.html
+++ b/index.html
@@ -40,16 +40,20 @@
   </div>
 </header>
 
-<section id="hero" class="py-5 container d-flex justify-content-between align-items-center">
-  <div class="d-flex flex-column align-items-start">
-    <h1>
-      <span>House of</span><br><span>Gambling</span>
-    </h1>
-    <p>Raise your ROI with direct advertiser</p>
-    <button class="cta-btn">Become a partner</button>
+<section id="hero">
+  <object type="image/svg+xml" class="light" data="assets/backgrounds/hero-light.svg"></object>
+  <object type="image/svg+xml" class="circle d-none d-md-block" data="assets/backgrounds/hero_circle.svg"></object>
+  <div class="container py-5 d-flex justify-content-between align-items-center">
+    <div class="d-flex flex-column align-items-start">
+      <h1>
+        <span>House of</span><br><span>Gambling</span>
+      </h1>
+      <p>Raise your ROI with direct advertiser</p>
+      <button class="cta-btn">Become a partner</button>
+    </div>
+    <div></div>
+    <div></div>
   </div>
-  <div></div>
-  <div></div>
 </section>
 
 <section id="about" class="container d-flex flex-column align-items-center">
@@ -97,6 +101,7 @@
 
 <section id="brands">
   <div class="container">
+    <object class="circle" type="image/svg+xml" data="assets/backgrounds/brands_circle.svg"></object>
     <h2 class="text-center mb-5">Our brands</h2>
     <div class="splide" aria-label="...">
       <div class="splide__track">
@@ -266,9 +271,13 @@
   </div>
 </section>
 
-<section>
+<section id="contact">
+<!--  <object type="image/svg+xml" data="assets/backgrounds/footer.svg" class="bg"></object>-->
   <div class="container">
     <h2 class="text-center">Contact us</h2>
+    <div class="container">
+      <form action="#" class="card tinted py-5 my-5"></form>
+    </div>
   </div>
 </section>
 
