--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
 </header>
 
 <section id="hero">
-  <object type="image/svg+xml" class="light" data="assets/backgrounds/hero-light.svg"></object>
-  <object type="image/svg+xml" class="circle d-none d-md-block" data="assets/backgrounds/hero_circle.svg"></object>
+  <object type="image/svg+xml" class="bg light" data="assets/backgrounds/hero-light.svg"></object>
+  <object type="image/svg+xml" class="bg circle d-none d-md-block" data="assets/backgrounds/hero_circle.svg"></object>
   <div class="container py-5 d-flex justify-content-between align-items-center">
     <div class="d-flex flex-column align-items-start">
       <h1>
@@ -56,52 +56,52 @@
   </div>
 </section>
 
-<section id="about" class="container d-flex flex-column align-items-center">
-  <h2>About us</h2>
-  <div class="container">
+<section id="about">
+  <div class="container d-flex flex-column align-items-center">
+    <h2>About us</h2>
     <p class="text-center">We are a direct advertiser and an online gambling affiliate program. MEGAPARTNERS guarantees the stability and reliability of all processes for our affiliates and players.</p>
-  </div>
-  <div class="d-flex flex-column flex-md-row">
-    <div class="d-none d-md-block me-3 svg">
-      <object type="image/svg+xml" data="assets/icons/coins/megapartners.svg"></object>
+    <div class="d-flex flex-column flex-md-row">
+      <div class="d-none d-md-block me-3 svg">
+        <object type="image/svg+xml" data="assets/icons/coins/megapartners.svg"></object>
+      </div>
+      <div class="about_cards d-flex flex-column justify-content-between">
+        <ul class="d-flex flex-column flex-md-row flex-wrap">
+          <li class="d-flex flex-column align-items-center justify-content-center card thick-bordered">
+            <h4 class="mb-2">5000+</h4>
+            <small class="d-block text-center">Lorem ipsum dolor.</small>
+          </li>
+          <li class="d-flex flex-column align-items-center justify-content-center card thick-bordered">
+            <h4 class="mb-2">5000+</h4>
+            <small class="d-block text-center">Continuous development and expansion of our own product portfolio</small>
+          </li>
+          <li class="d-flex flex-column align-items-center justify-content-center card thick-bordered">
+            <h4 class="mb-2">5000+</h4>
+            <small class="d-block text-center">Continuous development and expansion of our own product portfolio</small>
+          </li>
+        </ul>
+        <ul class="d-flex flex-column flex-md-row flex-wrap">
+          <li class="d-flex flex-column align-items-center justify-content-center card thick-bordered">
+            <h4 class="mb-2">5000+</h4>
+            <small class="d-block text-center">Continuous development and expansion of our own product portfolio</small>
+          </li>
+          <li class="d-flex flex-column align-items-center justify-content-center card thick-bordered">
+            <h4 class="mb-2">5000+</h4>
+            <small class="d-block text-center">Lorem ipsum dolor sit amet.</small>
+          </li>
+          <li class="d-flex flex-column align-items-center justify-content-center card thick-bordered">
+            <h4 class="mb-2">5000+</h4>
+            <small class="d-block text-center">Continuous development and expansion of our own product portfolio</small>
+          </li>
+        </ul>
+      </div>
     </div>
-    <div class="about_cards d-flex flex-column justify-content-between">
-      <ul class="d-flex flex-column flex-md-row flex-wrap">
-        <li class="d-flex flex-column align-items-center justify-content-center card thick-bordered">
-          <h3 class="mb-2">5000+</h3>
-          <small class="d-block text-center">Continuous development and expansion of our own product portfolio</small>
-        </li>
-        <li class="d-flex flex-column align-items-center justify-content-center card thick-bordered">
-          <h3 class="mb-2">5000+</h3>
-          <small class="d-block text-center">Continuous development and expansion of our own product portfolio</small>
-        </li>
-        <li class="d-flex flex-column align-items-center justify-content-center card thick-bordered">
-          <h3 class="mb-2">5000+</h3>
-          <small class="d-block text-center">Continuous development and expansion of our own product portfolio</small>
-        </li>
-      </ul>
-      <ul class="d-flex flex-column flex-md-row flex-wrap">
-        <li class="d-flex flex-column align-items-center justify-content-center card thick-bordered">
-          <h3 class="mb-2">5000+</h3>
-          <small class="d-block text-center">Continuous development and expansion of our own product portfolio</small>
-        </li>
-        <li class="d-flex flex-column align-items-center justify-content-center card thick-bordered">
-          <h3 class="mb-2">5000+</h3>
-          <small class="d-block text-center">Continuous development and expansion of our own product portfolio</small>
-        </li>
-        <li class="d-flex flex-column align-items-center justify-content-center card thick-bordered">
-          <h3 class="mb-2">5000+</h3>
-          <small class="d-block text-center">Continuous development and expansion of our own product portfolio</small>
-        </li>
-      </ul>
-    </div>
+    <button class="cta-btn mt-5">Become a partner</button>
   </div>
-  <button class="cta-btn mt-5">Become a partner</button>
 </section>
 
 <section id="brands">
+  <object class="bg circle" type="image/svg+xml" data="assets/backgrounds/brands_circle.svg"></object>
   <div class="container">
-    <object class="circle" type="image/svg+xml" data="assets/backgrounds/brands_circle.svg"></object>
     <h2 class="text-center mb-5">Our brands</h2>
     <div class="splide" aria-label="...">
       <div class="splide__track">
@@ -149,6 +149,8 @@
 </section>
 
 <section id="commissions">
+  <object class="bg coins" type="image/svg+xml" data="assets/backgrounds/commissions_coins.svg"></object>
+  <object class="bg light" type="image/svg+xml" data="assets/backgrounds/commissions_light.svg"></object>
   <div class="container">
     <h2 class="text-center">Commissions</h2>
     <p class="text-center">We have calculated and selected different types of commissions so that you can always choose the most profitable option for yourself.</p>
@@ -204,16 +206,57 @@
     <div class="splide" aria-label="...">
       <div class="splide__track">
         <ul class="splide__list">
-          <li class="splide__slide card tinted thick-bordered">Slide 01</li>
-          <li class="splide__slide card tinted thick-bordered">Slide 012</li>
-          <li class="splide__slide card tinted thick-bordered">Slide 03</li>
-          <li class="splide__slide card tinted thick-bordered">Slide 04</li>
-          <li class="splide__slide card tinted thick-bordered">Slide 05</li>
-          <li class="splide__slide card tinted thick-bordered">Slide 06</li>
+          <li class="splide__slide card tinted thick-bordered d-flex flex-column align-items-center">
+            <div class="inner d-flex flex-column justify-content-start align-items-center">
+              <h4>ICE LONDON UK</h4>
+              <div class="place">Global Gaming HUB</div>
+              <h3 class="mt-2">7-9 February</h3>
+              <div class="d-flex align-items-center justify-content-center">
+                <object type="image/svg+xml" data="assets/icons/location.svg"></object>
+                <small class="ms-2">London</small>
+              </div>
+            </div>
+            <button class="cta-btn mt-4">Book a meeting</button>
+          </li>
+          <li class="splide__slide card tinted thick-bordered d-flex flex-column align-items-center">
+            <div class="inner d-flex flex-column justify-content-start align-items-center">
+              <h4>ICE LONDON UK</h4>
+              <div class="place">Global Gaming HUB</div>
+              <h3 class="mt-2">7-9 February</h3>
+              <div class="d-flex align-items-center justify-content-center">
+                <object type="image/svg+xml" data="assets/icons/location.svg"></object>
+                <small class="ms-2">London</small>
+              </div>
+            </div>
+            <button class="cta-btn mt-4">Book a meeting</button>
+          </li>
+          <li class="splide__slide card tinted thick-bordered d-flex flex-column align-items-center">
+            <div class="inner d-flex flex-column justify-content-start align-items-center">
+              <h4>ICE LONDON UK</h4>
+              <div class="place">Global Gaming HUB</div>
+              <h3 class="mt-2">7-9 February</h3>
+              <div class="d-flex align-items-center justify-content-center">
+                <object type="image/svg+xml" data="assets/icons/location.svg"></object>
+                <small class="ms-2">London</small>
+              </div>
+            </div>
+            <button class="cta-btn mt-4">Book a meeting</button>
+          </li>
+          <li class="splide__slide card tinted thick-bordered d-flex flex-column align-items-center">
+            <div class="inner d-flex flex-column justify-content-start align-items-center">
+              <h4>ICE LONDON UK</h4>
+              <div class="place">Global Gaming HUB</div>
+              <h3 class="mt-2">7-9 February</h3>
+              <div class="d-flex align-items-center justify-content-center">
+                <object type="image/svg+xml" data="assets/icons/location.svg"></object>
+                <small class="ms-2">London</small>
+              </div>
+            </div>
+            <button class="cta-btn mt-4">Book a meeting</button>
+          </li>
         </ul>
       </div>
 
-      <!-- Add the progress bar element -->
       <div class="my-carousel-progress mt-4">
         <div class="my-carousel-progress-bar"></div>
       </div>
@@ -237,7 +280,9 @@
   </div>
 </section>
 
-<section>
+<section id="faq">
+  <object class="bg coins_left" type="image/svg+xml" data="assets/backgrounds/faq_left.svg"></object>
+  <object class="bg coins_right" type="image/svg+xml" data="assets/backgrounds/faq_right.svg"></object>
   <div class="container">
     <h2 class="text-center mb-5">FAQ</h2>
     <div class="container">
