--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   </div>
 </header>
 
-<section id="hero">
+<section id="hero" class="d-flex align-items-center">
   <object type="image/svg+xml" class="bg light" data="assets/backgrounds/hero-light.svg"></object>
   <object type="image/svg+xml" class="bg circle d-none d-md-block" data="assets/backgrounds/hero_circle.svg"></object>
   <div class="container py-5 d-flex justify-content-between align-items-center">
@@ -51,8 +51,30 @@
       <p>Raise your ROI with direct advertiser</p>
       <button class="cta-btn">Become a partner</button>
     </div>
-    <div></div>
-    <div></div>
+    <div class="blog d-flex flex-column thick-bordered">
+      <ul>
+        <li class="card tinted">
+          <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+          <small class="mt-4">10.02.2023</small>
+        </li>
+        <li class="card tinted">
+          <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+          <small class="mt-4">10.02.2023</small>
+        </li>
+        <li class="card tinted">
+          <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+          <small class="mt-4">10.02.2023</small>
+        </li>
+        <li class="card tinted">
+          <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+          <small class="mt-4">10.02.2023</small>
+        </li>
+        <li class="card tinted">
+          <div>Payment methods: Skrill, Neteller, webmoney, Bank transfer</div>
+          <small class="mt-4">10.02.2023</small>
+        </li>
+      </ul>
+    </div>
   </div>
 </section>
 
@@ -202,7 +224,7 @@
 
 <section id="events">
   <div class="container">
-    <h2 class="text-center">Events</h2>
+    <h2 class="text-center mb-5">Events</h2>
     <div class="splide" aria-label="...">
       <div class="splide__track">
         <ul class="splide__list">
@@ -272,7 +294,7 @@
       <form class="d-flex justify-content-between">
         <div class="input">
           <input placeholder="Your email..." type="email">
-          <span>Email</span>
+          <span>Email:</span>
         </div>
         <button class="cta-btn ms-3">Subscribe</button>
       </form>
@@ -317,11 +339,44 @@
 </section>
 
 <section id="contact">
-<!--  <object type="image/svg+xml" data="assets/backgrounds/footer.svg" class="bg"></object>-->
   <div class="container">
     <h2 class="text-center">Contact us</h2>
     <div class="container">
-      <form action="#" class="card tinted py-5 my-5"></form>
+      <form action="#" class="thick-bordered py-5 my-5">
+        <div class="container d-flex flex-column align-items-center">
+          <header class="d-flex flex-column align-items-center">
+            <h4>Let’s start a conversation!</h4>
+            <span>Would you like to start cooperation with MEGAPARTNERS in any field? Drop us a line!</span>
+          </header>
+          <div class="mt-5">
+            <ul class="d-flex group justify-content-between">
+              <li>
+                <div class="input">
+                  <input placeholder="Your name..." type="text">
+                  <span>Name:</span>
+                </div>
+              </li>
+              <li>
+                <div class="input">
+                  <input placeholder="Your email..." type="email">
+                  <span>Email:</span>
+                </div>
+              </li>
+              <li>
+                <div class="input">
+                  <input placeholder="In progress..." type="text">
+                  <span>In progress...:</span>
+                </div>
+             </li>
+            </ul>
+            <div class="input textarea mt-3">
+              <textarea rows="4" placeholder="Message..." type="text" ></textarea>
+              <span>Message:</span>
+            </div>
+            <button class="cta-btn mt-3">Send a message</button>
+          </div>
+        </div>
+      </form>
     </div>
   </div>
 </section>
