--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 <body>
 <header id="header" class="mt-3">
   <div class="container">
-    <div class="d-flex justify-content-between align-items-center bordered px-5 py-4">
-      <object type="image/svg+xml" data="assets/icons/logo.svg"></object>
-      <nav>
+    <div class="d-flex justify-content-between align-items-center bordered px-4 px-md-5 py-4">
+      <object class="d-none d-md-block" type="image/svg+xml" data="assets/icons/logo.svg"></object>
+      <object class="d-block d-md-none" type="image/svg+xml" data="assets/icons/logo_mobile.svg"></object>
+      <nav class="d-none d-md-block">
         <ul class="group d-flex">
           <li><a href="about.html">About us</a></li>
           <li><a href="brands.html">Brands</a></li>
@@ -26,13 +27,19 @@
           <li><a href="careers.html">Careers</a></li>
         </ul>
       </nav>
-      <div class="group d-flex">
+      <div class="group d-flex align-items-center">
         <button class="btn d-flex align-items-center">
-          <object class="me-1" type="image/svg+xml" data="assets/icons/earth.svg"></object>
-          EN
+          <object class="me-md-1" type="image/svg+xml" data="assets/icons/earth.svg"></object>
+          <span class="d-none d-md-inline">EN</span>
         </button>
-        <button class="btn">LOG IN</button>
-        <button class="btn">
+        <div id="nav-icon3" class="d-block d-md-none">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <button class="btn d-none d-md-block">LOG IN</button>
+        <button class="btn d-none d-md-block">
           SIGN UP
         </button>
       </div>
@@ -40,11 +47,30 @@
   </div>
 </header>
 
+<aside class="sidebar">
+  <div class="container">
+    <nav>
+      <ul class="d-flex flex-column align-items-center mb-5">
+        <li class="bordered p-4"><a href="about.html">About us</a></li>
+        <li class="bordered p-4"><a href="brands.html">Brands</a></li>
+        <li class="bordered p-4"><a href="commissions.html">Commissions</a></li>
+        <li class="bordered p-4"><a href="news.html">News</a></li>
+        <li class="bordered p-4"><a href="contact.html">Contact us</a></li>
+        <li class="bordered p-4"><a href="careers.html">Careers</a></li>
+      </ul>
+      <ul>
+        <li><button class="btn">Log in</button></li>
+        <li><button class="btn">Signup</button></li>
+      </ul>
+    </nav>
+  </div>
+</aside>
+
 <section id="hero" class="d-flex align-items-center">
   <object type="image/svg+xml" class="bg light" data="assets/backgrounds/hero-light.svg"></object>
   <object type="image/svg+xml" class="bg circle d-none d-md-block" data="assets/backgrounds/hero_circle.svg"></object>
-  <div class="container py-5 d-flex justify-content-between align-items-center">
-    <div class="d-flex flex-column align-items-start">
+  <div class="container py-5 d-flex flex-column flex-md-row justify-content-between align-items-center">
+    <div class="d-flex flex-column align-items-center align-items-md-start">
       <h1>
         <span>House of</span><br><span>Gambling</span>
       </h1>
@@ -176,7 +202,7 @@
   <div class="container">
     <h2 class="text-center">Commissions</h2>
     <p class="text-center">We have calculated and selected different types of commissions so that you can always choose the most profitable option for yourself.</p>
-    <div class="d-flex align-items-center justify-content-between">
+    <div class="d-flex flex-column flex-md-row align-items-center justify-content-between">
       <ul class="d-flex flex-column flex-grow-1">
         <li class="card bg-transparent thick-bordered d-flex flex-column align-items-center">
           <h4>CPA</h4>
@@ -382,7 +408,7 @@
 </section>
 
 <footer class="thick-bordered">
-  <div class="container d-flex justify-content-between align-items-end">
+  <div class="container d-flex flex-column flex-md-row justify-content-between align-items-md-end">
     <div>
       <object class="mb-2" type="image/svg+xml" data="assets/icons/logo.svg"></object>
       <div class="d-flex align-items-center">
@@ -391,7 +417,7 @@
       </div>
     </div>
     <nav>
-      <ul class="group d-flex">
+      <ul class="group d-flex flex-column flex-md-row">
         <li><a href="#">Terms & Conditions</a></li>
         <li><a href="#">Cookies</a></li>
         <li><a href="contact.html">Contacts</a></li>
