careers page & adaptive fixes

--- a/careers.html
+++ b/careers.html
@@ -5,9 +5,193 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Careers</title>
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/pages/careers.css">
+  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-grid.css">
+  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-grid.min.css">
+  <title>Megapartners | Careers</title>
 </head>
 <body>
-<h1>Careers</h1>
+<header id="header" class="mt-3">
+  <div class="container">
+    <div class="d-flex justify-content-between align-items-center bordered px-4 px-md-5 py-4">
+      <object class="d-none d-md-block" type="image/svg+xml" data="assets/icons/logo.svg"></object>
+      <object class="d-block d-md-none" type="image/svg+xml" data="assets/icons/logo_mobile.svg"></object>
+      <nav class="d-none d-md-block">
+        <ul class="group d-flex">
+          <li><a href="index.html">About us</a></li>
+          <li><a href="brands.html">Brands</a></li>
+          <li><a href="commissions.html">Commissions</a></li>
+          <li><a href="news.html">News</a></li>
+          <li><a href="contact.html">Contact us</a></li>
+          <li><a href="careers.html">Careers</a></li>
+        </ul>
+      </nav>
+      <div class="group d-flex align-items-center">
+        <button class="btn d-flex align-items-center">
+          <object class="me-md-1" type="image/svg+xml" data="assets/icons/earth.svg"></object>
+          <span class="d-none d-md-inline">EN</span>
+        </button>
+        <div id="nav-icon3" class="d-block d-md-none">
+          <span></span>
+          <span></span>
+          <span></span>
+          <span></span>
+        </div>
+        <button class="btn d-none d-md-block">LOG IN</button>
+        <button class="btn d-none d-md-block">
+          SIGN UP
+        </button>
+      </div>
+    </div>
+  </div>
+</header>
+
+<aside class="sidebar">
+  <div class="container">
+    <nav>
+      <ul class="d-flex flex-column align-items-center mb-5">
+        <li class="bordered p-4"><a href="index.html">About us</a></li>
+        <li class="bordered p-4"><a href="brands.html">Brands</a></li>
+        <li class="bordered p-4"><a href="commissions.html">Commissions</a></li>
+        <li class="bordered p-4"><a href="news.html">News</a></li>
+        <li class="bordered p-4"><a href="contact.html">Contact us</a></li>
+        <li class="bordered p-4"><a href="careers.html">Careers</a></li>
+      </ul>
+      <ul>
+        <li><button class="btn">Log in</button></li>
+        <li><button class="btn">Signup</button></li>
+      </ul>
+    </nav>
+  </div>
+</aside>
+
+<section id="hero" class="d-flex flex-column align-items-center justify-content-center">
+  <object type="image/svg+xml" data="assets/icons/careers_logo.svg"></object>
+  <object class="bg circle" type="image/svg+xml" data="assets/backgrounds/careers_circle.svg"></object>
+  <h2>Make yourself at home</h2>
+</section>
+
+<section id="offer">
+  <div class="container">
+    <h2 class="text-center mb-5">What we offer?</h2>
+    <ul class="d-inline-flex flex-wrap">
+      <li class="thick-bordered card tinted d-flex">
+        <div class="bg-coin me-4">
+          <div class="coin-svg">
+            <svg width="108" height="108" viewBox="0 0 108 108" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M16.3617 92.0418C15.6588 91.3388 15.6588 90.1991 16.3617 89.4962L89.4564 16.4016C90.1593 15.6986 91.299 15.6986 92.0019 16.4016C92.7049 17.1045 92.7049 18.2442 92.0019 18.9471L18.9073 92.0418C18.2044 92.7447 17.0647 92.7447 16.3617 92.0418Z" fill="#478BF9"/>
+              <path d="M15.9981 16.4016C16.701 15.6986 17.8407 15.6986 18.5436 16.4016L91.6383 89.4962C92.3412 90.1991 92.3412 91.3388 91.6383 92.0418C90.9353 92.7447 89.7956 92.7447 89.0927 92.0418L15.9981 18.9471C15.2951 18.2442 15.2951 17.1045 15.9981 16.4016Z" fill="#478BF9"/>
+              <path d="M54 97.7143C78.1428 97.7143 97.7143 78.1427 97.7143 54C97.7143 29.8573 78.1428 10.2857 54 10.2857C29.8573 10.2857 10.2857 29.8573 10.2857 54C10.2857 78.1427 29.8573 97.7143 54 97.7143Z" fill="#478BF9"/>
+              <path d="M15.7989 92.2011C-5.26629 71.1359 -5.26629 36.8641 15.7989 15.7989C36.8641 -5.26629 71.1359 -5.26629 92.2011 15.7989C113.266 36.8641 113.266 71.1359 92.2011 92.2011C71.1359 113.266 36.8641 113.266 15.7989 92.2011ZM89.655 18.3449C69.9935 -1.31657 38.0064 -1.31657 18.35 18.3449C-1.31146 38.0065 -1.31146 69.9936 18.35 89.65C38.0116 109.311 69.9986 109.311 89.655 89.65C109.317 69.9884 109.317 38.0013 89.655 18.3449Z" fill="#478BF9"/>
+            </svg>
+          </div>
+          <span class="coin-number d-flex justify-content-center align-items-center">1</span>
+        </div>
+        <div class="d-flex flex-column justify-content-center">
+          <h4>Cutting edge</h4>
+          <span>Professional team committed to innovation.</span>
+        </div>
+      </li>
+      <li class="thick-bordered card tinted d-flex">
+        <div class="bg-coin me-4">
+          <div class="coin-svg">
+            <svg width="108" height="108" viewBox="0 0 108 108" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M16.3617 92.0418C15.6588 91.3388 15.6588 90.1991 16.3617 89.4962L89.4564 16.4016C90.1593 15.6986 91.299 15.6986 92.0019 16.4016C92.7049 17.1045 92.7049 18.2442 92.0019 18.9471L18.9073 92.0418C18.2044 92.7447 17.0647 92.7447 16.3617 92.0418Z" fill="#478BF9"/>
+              <path d="M15.9981 16.4016C16.701 15.6986 17.8407 15.6986 18.5436 16.4016L91.6383 89.4962C92.3412 90.1991 92.3412 91.3388 91.6383 92.0418C90.9353 92.7447 89.7956 92.7447 89.0927 92.0418L15.9981 18.9471C15.2951 18.2442 15.2951 17.1045 15.9981 16.4016Z" fill="#478BF9"/>
+              <path d="M54 97.7143C78.1428 97.7143 97.7143 78.1427 97.7143 54C97.7143 29.8573 78.1428 10.2857 54 10.2857C29.8573 10.2857 10.2857 29.8573 10.2857 54C10.2857 78.1427 29.8573 97.7143 54 97.7143Z" fill="#478BF9"/>
+              <path d="M15.7989 92.2011C-5.26629 71.1359 -5.26629 36.8641 15.7989 15.7989C36.8641 -5.26629 71.1359 -5.26629 92.2011 15.7989C113.266 36.8641 113.266 71.1359 92.2011 92.2011C71.1359 113.266 36.8641 113.266 15.7989 92.2011ZM89.655 18.3449C69.9935 -1.31657 38.0064 -1.31657 18.35 18.3449C-1.31146 38.0065 -1.31146 69.9936 18.35 89.65C38.0116 109.311 69.9986 109.311 89.655 89.65C109.317 69.9884 109.317 38.0013 89.655 18.3449Z" fill="#478BF9"/>
+            </svg>
+          </div>
+          <span class="coin-number d-flex justify-content-center align-items-center">2</span>
+        </div>
+        <div class="d-flex flex-column justify-content-center">
+          <h4>Fast-moving</h4>
+          <span>Energetic atmosphere. We and our plans grow quickly.</span>
+        </div>
+      </li>
+      <li class="thick-bordered card tinted d-flex">
+        <div class="bg-coin me-4">
+          <div class="coin-svg">
+            <svg width="108" height="108" viewBox="0 0 108 108" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M16.3617 92.0418C15.6588 91.3388 15.6588 90.1991 16.3617 89.4962L89.4564 16.4016C90.1593 15.6986 91.299 15.6986 92.0019 16.4016C92.7049 17.1045 92.7049 18.2442 92.0019 18.9471L18.9073 92.0418C18.2044 92.7447 17.0647 92.7447 16.3617 92.0418Z" fill="#478BF9"/>
+              <path d="M15.9981 16.4016C16.701 15.6986 17.8407 15.6986 18.5436 16.4016L91.6383 89.4962C92.3412 90.1991 92.3412 91.3388 91.6383 92.0418C90.9353 92.7447 89.7956 92.7447 89.0927 92.0418L15.9981 18.9471C15.2951 18.2442 15.2951 17.1045 15.9981 16.4016Z" fill="#478BF9"/>
+              <path d="M54 97.7143C78.1428 97.7143 97.7143 78.1427 97.7143 54C97.7143 29.8573 78.1428 10.2857 54 10.2857C29.8573 10.2857 10.2857 29.8573 10.2857 54C10.2857 78.1427 29.8573 97.7143 54 97.7143Z" fill="#478BF9"/>
+              <path d="M15.7989 92.2011C-5.26629 71.1359 -5.26629 36.8641 15.7989 15.7989C36.8641 -5.26629 71.1359 -5.26629 92.2011 15.7989C113.266 36.8641 113.266 71.1359 92.2011 92.2011C71.1359 113.266 36.8641 113.266 15.7989 92.2011ZM89.655 18.3449C69.9935 -1.31657 38.0064 -1.31657 18.35 18.3449C-1.31146 38.0065 -1.31146 69.9936 18.35 89.65C38.0116 109.311 69.9986 109.311 89.655 89.65C109.317 69.9884 109.317 38.0013 89.655 18.3449Z" fill="#478BF9"/>
+            </svg>
+          </div>
+          <span class="coin-number d-flex justify-content-center align-items-center">3</span>
+        </div>
+        <div class="d-flex flex-column justify-content-center">
+          <h4>Venturous</h4>
+          <span>We are not afraid to take risks on our way to success.</span>
+        </div>
+      </li>
+      <li class="thick-bordered card tinted d-flex">
+        <div class="bg-coin me-4">
+          <div class="coin-svg">
+            <svg width="108" height="108" viewBox="0 0 108 108" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M16.3617 92.0418C15.6588 91.3388 15.6588 90.1991 16.3617 89.4962L89.4564 16.4016C90.1593 15.6986 91.299 15.6986 92.0019 16.4016C92.7049 17.1045 92.7049 18.2442 92.0019 18.9471L18.9073 92.0418C18.2044 92.7447 17.0647 92.7447 16.3617 92.0418Z" fill="#478BF9"/>
+              <path d="M15.9981 16.4016C16.701 15.6986 17.8407 15.6986 18.5436 16.4016L91.6383 89.4962C92.3412 90.1991 92.3412 91.3388 91.6383 92.0418C90.9353 92.7447 89.7956 92.7447 89.0927 92.0418L15.9981 18.9471C15.2951 18.2442 15.2951 17.1045 15.9981 16.4016Z" fill="#478BF9"/>
+              <path d="M54 97.7143C78.1428 97.7143 97.7143 78.1427 97.7143 54C97.7143 29.8573 78.1428 10.2857 54 10.2857C29.8573 10.2857 10.2857 29.8573 10.2857 54C10.2857 78.1427 29.8573 97.7143 54 97.7143Z" fill="#478BF9"/>
+              <path d="M15.7989 92.2011C-5.26629 71.1359 -5.26629 36.8641 15.7989 15.7989C36.8641 -5.26629 71.1359 -5.26629 92.2011 15.7989C113.266 36.8641 113.266 71.1359 92.2011 92.2011C71.1359 113.266 36.8641 113.266 15.7989 92.2011ZM89.655 18.3449C69.9935 -1.31657 38.0064 -1.31657 18.35 18.3449C-1.31146 38.0065 -1.31146 69.9936 18.35 89.65C38.0116 109.311 69.9986 109.311 89.655 89.65C109.317 69.9884 109.317 38.0013 89.655 18.3449Z" fill="#478BF9"/>
+            </svg>
+          </div>
+          <span class="coin-number d-flex justify-content-center align-items-center">4</span>
+        </div>
+        <div class="d-flex flex-column justify-content-center">
+          <h4>Global</h4>
+          <span>Our team and our partners are a family all around the globe.</span>
+        </div>
+      </li>
+    </ul>
+  </div>
+</section>
+
+<section>
+  <div class="container">
+    <h2 class="text-center">Open positions</h2>
+  </div>
+</section>
+
+<footer class="thick-bordered">
+  <div class="container d-flex flex-column flex-md-row justify-content-between align-items-md-end">
+    <div>
+      <object class="mb-2" type="image/svg+xml" data="assets/icons/logo.svg"></object>
+      <div class="d-flex align-items-center">
+        <object class="me-4" type="image/svg+xml" data="assets/icons/partners/malta.svg"></object>
+        <object type="image/svg+xml" data="assets/icons/partners/curacao.svg"></object>
+      </div>
+    </div>
+    <nav>
+      <ul class="group d-flex flex-column flex-md-row">
+        <li><a href="#">Terms & Conditions</a></li>
+        <li><a href="#">Cookies</a></li>
+        <li><a href="contact.html">Contacts</a></li>
+        <li><a href="careers.html">Careers</a></li>
+        <li><a href="brands.html">Brand Guide</a></li>
+      </ul>
+    </nav>
+    <div>
+      <header class="d-block mb-3">Our social media:</header>
+      <ul class="group d-flex flex-wrap">
+        <li><object type="image/svg+xml" data="assets/icons/social-media/twitter.svg"></object></li>
+        <li><object type="image/svg+xml" data="assets/icons/social-media/fb.svg"></object></li>
+        <li><object type="image/svg+xml" data="assets/icons/social-media/insta.svg"></object></li>
+        <li><object type="image/svg+xml" data="assets/icons/social-media/linked.svg"></object></li>
+        <li><object type="image/svg+xml" data="assets/icons/social-media/yt.svg"></object></li>
+        <li><object type="image/svg+xml" data="assets/icons/social-media/tt.svg"></object></li>
+        <li><object type="image/svg+xml" data="assets/icons/social-media/tg.svg"></object></li>
+        <li><object type="image/svg+xml" data="assets/icons/social-media/vk.svg"></object></li>
+      </ul>
+    </div>
+  </div>
+  <div class="container text-center">
+    <hr class="mt-3 mb-1">
+    <span>Copyright © 2023 Megapartners.io</span>
+  </div>
+</footer>
+
+<script src="index.js"></script>
 </body>
 </html>
