--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/pages/home.css">
   <link rel="stylesheet" href="lib/splide/dist/css/splide.min.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-grid.css">
   <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-grid.min.css">
@@ -19,7 +20,7 @@
       <object class="d-block d-md-none" type="image/svg+xml" data="assets/icons/logo_mobile.svg"></object>
       <nav class="d-none d-md-block">
         <ul class="group d-flex">
-          <li><a href="about.html">About us</a></li>
+          <li><a href="index.html">About us</a></li>
           <li><a href="brands.html">Brands</a></li>
           <li><a href="commissions.html">Commissions</a></li>
           <li><a href="news.html">News</a></li>
@@ -51,7 +52,7 @@
   <div class="container">
     <nav>
       <ul class="d-flex flex-column align-items-center mb-5">
-        <li class="bordered p-4"><a href="about.html">About us</a></li>
+        <li class="bordered p-4"><a href="index.html">About us</a></li>
         <li class="bordered p-4"><a href="brands.html">Brands</a></li>
         <li class="bordered p-4"><a href="commissions.html">Commissions</a></li>
         <li class="bordered p-4"><a href="news.html">News</a></li>
@@ -446,5 +447,6 @@
 </footer>
 <script src="lib/splide/dist/js/splide.min.js"></script>
 <script src="index.js"></script>
+<script src="js/home.js"></script>
 </body>
 </html>
