--- a/careers.html
+++ b/careers.html
@@ -73,6 +73,7 @@
 </section>
 
 <section id="offer">
+  <object class="bg light" type="image/svg+xml" data="assets/backgrounds/careers_offer_light.svg"></object>
   <div class="container">
     <h2 class="text-center mb-5">What we offer?</h2>
     <ul class="d-inline-flex flex-wrap">
@@ -148,9 +149,163 @@
   </div>
 </section>
 
-<section>
+<section id="positions">
   <div class="container">
-    <h2 class="text-center">Open positions</h2>
+    <h2 class="text-center mb-5">Open positions</h2>
+    <ul class="filters thick-bordered d-flex group px-4 py-2">
+      <li>
+        <button class="btn" data-filter="all">View all</button>
+      </li>
+      <li>
+        <button class="btn" data-filter="marketing">Marketing</button>
+      </li>
+      <li>
+        <button class="btn" data-filter="it">IT</button>
+      </li>
+    </ul>
+    <ul class="filtered-content mt-5 d-inline-flex flex-wrap">
+      <li class="card tinted thick-bordered d-flex flex-column">
+        <small class="d-block" data-marker="marketing">Marketing</small>
+        <h4>PPC Specialist Mobile App</h4>
+        <div class="d-flex mt-3">
+          <div class="location-tag bordered d-flex align-items-center me-3">
+            <svg width="20" height="24" viewBox="0 0 20 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.0001 11.9997C10.6417 11.9997 11.1912 11.771 11.6486 11.3137C12.1051 10.8571 12.3334 10.308 12.3334 9.66634C12.3334 9.02468 12.1051 8.47517 11.6486 8.01784C11.1912 7.56129 10.6417 7.33301 10.0001 7.33301C9.35841 7.33301 8.8093 7.56129 8.35275 8.01784C7.89541 8.47517 7.66675 9.02468 7.66675 9.66634C7.66675 10.308 7.89541 10.8571 8.35275 11.3137C8.8093 11.771 9.35841 11.9997 10.0001 11.9997ZM10.0001 20.5747C12.3723 18.3969 14.132 16.4182 15.2792 14.6387C16.4265 12.8599 17.0001 11.2802 17.0001 9.89968C17.0001 7.78023 16.3242 6.04462 14.9724 4.69284C13.6214 3.34184 11.964 2.66634 10.0001 2.66634C8.03619 2.66634 6.37836 3.34184 5.02658 4.69284C3.67558 6.04462 3.00008 7.78023 3.00008 9.89968C3.00008 11.2802 3.57369 12.8599 4.72091 14.6387C5.86814 16.4182 7.62786 18.3969 10.0001 20.5747ZM10.0001 23.2288C9.84452 23.2288 9.68897 23.1997 9.53341 23.1413C9.37786 23.083 9.24175 23.0052 9.12508 22.908C6.28619 20.3997 4.16675 18.0714 2.76675 15.9232C1.36675 13.7742 0.666748 11.7663 0.666748 9.89968C0.666748 6.98301 1.60514 4.6594 3.48191 2.92884C5.35791 1.19829 7.53064 0.333008 10.0001 0.333008C12.4695 0.333008 14.6422 1.19829 16.5182 2.92884C18.395 4.6594 19.3334 6.98301 19.3334 9.89968C19.3334 11.7663 18.6334 13.7742 17.2334 15.9232C15.8334 18.0714 13.714 20.3997 10.8751 22.908C10.7584 23.0052 10.6223 23.083 10.4667 23.1413C10.3112 23.1997 10.1556 23.2288 10.0001 23.2288Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Remote</span>
+          </div>
+          <div class="time-tag bordered d-flex align-items-center">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11.9883 0.333008C5.54825 0.333008 0.333252 5.55967 0.333252 11.9997C0.333252 18.4397 5.54825 23.6663 11.9883 23.6663C18.4399 23.6663 23.6666 18.4397 23.6666 11.9997C23.6666 5.55967 18.4399 0.333008 11.9883 0.333008ZM11.9999 21.333C6.84325 21.333 2.66659 17.1563 2.66659 11.9997C2.66659 6.84301 6.84325 2.66634 11.9999 2.66634C17.1566 2.66634 21.3333 6.84301 21.3333 11.9997C21.3333 17.1563 17.1566 21.333 11.9999 21.333Z" fill="#478BF9"/>
+              <path d="M12.5833 6.16699H10.8333V13.167L16.9583 16.842L17.8333 15.407L12.5833 12.292V6.16699Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Full-time</span>
+          </div>
+        </div>
+      </li>
+      <li class="card tinted thick-bordered d-flex flex-column">
+        <small class="d-block" data-marker="marketing">Marketing</small>
+        <h4>PPC Specialist Mobile App</h4>
+        <div class="d-flex mt-3">
+          <div class="location-tag bordered d-flex align-items-center me-3">
+            <svg width="20" height="24" viewBox="0 0 20 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.0001 11.9997C10.6417 11.9997 11.1912 11.771 11.6486 11.3137C12.1051 10.8571 12.3334 10.308 12.3334 9.66634C12.3334 9.02468 12.1051 8.47517 11.6486 8.01784C11.1912 7.56129 10.6417 7.33301 10.0001 7.33301C9.35841 7.33301 8.8093 7.56129 8.35275 8.01784C7.89541 8.47517 7.66675 9.02468 7.66675 9.66634C7.66675 10.308 7.89541 10.8571 8.35275 11.3137C8.8093 11.771 9.35841 11.9997 10.0001 11.9997ZM10.0001 20.5747C12.3723 18.3969 14.132 16.4182 15.2792 14.6387C16.4265 12.8599 17.0001 11.2802 17.0001 9.89968C17.0001 7.78023 16.3242 6.04462 14.9724 4.69284C13.6214 3.34184 11.964 2.66634 10.0001 2.66634C8.03619 2.66634 6.37836 3.34184 5.02658 4.69284C3.67558 6.04462 3.00008 7.78023 3.00008 9.89968C3.00008 11.2802 3.57369 12.8599 4.72091 14.6387C5.86814 16.4182 7.62786 18.3969 10.0001 20.5747ZM10.0001 23.2288C9.84452 23.2288 9.68897 23.1997 9.53341 23.1413C9.37786 23.083 9.24175 23.0052 9.12508 22.908C6.28619 20.3997 4.16675 18.0714 2.76675 15.9232C1.36675 13.7742 0.666748 11.7663 0.666748 9.89968C0.666748 6.98301 1.60514 4.6594 3.48191 2.92884C5.35791 1.19829 7.53064 0.333008 10.0001 0.333008C12.4695 0.333008 14.6422 1.19829 16.5182 2.92884C18.395 4.6594 19.3334 6.98301 19.3334 9.89968C19.3334 11.7663 18.6334 13.7742 17.2334 15.9232C15.8334 18.0714 13.714 20.3997 10.8751 22.908C10.7584 23.0052 10.6223 23.083 10.4667 23.1413C10.3112 23.1997 10.1556 23.2288 10.0001 23.2288Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Remote</span>
+          </div>
+          <div class="time-tag bordered d-flex align-items-center">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11.9883 0.333008C5.54825 0.333008 0.333252 5.55967 0.333252 11.9997C0.333252 18.4397 5.54825 23.6663 11.9883 23.6663C18.4399 23.6663 23.6666 18.4397 23.6666 11.9997C23.6666 5.55967 18.4399 0.333008 11.9883 0.333008ZM11.9999 21.333C6.84325 21.333 2.66659 17.1563 2.66659 11.9997C2.66659 6.84301 6.84325 2.66634 11.9999 2.66634C17.1566 2.66634 21.3333 6.84301 21.3333 11.9997C21.3333 17.1563 17.1566 21.333 11.9999 21.333Z" fill="#478BF9"/>
+              <path d="M12.5833 6.16699H10.8333V13.167L16.9583 16.842L17.8333 15.407L12.5833 12.292V6.16699Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Full-time</span>
+          </div>
+        </div>
+      </li>
+      <li class="card tinted thick-bordered d-flex flex-column">
+        <small class="d-block" data-marker="marketing">Marketing</small>
+        <h4>PPC Specialist Mobile App</h4>
+        <div class="d-flex mt-3">
+          <div class="location-tag bordered d-flex align-items-center me-3">
+            <svg width="20" height="24" viewBox="0 0 20 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.0001 11.9997C10.6417 11.9997 11.1912 11.771 11.6486 11.3137C12.1051 10.8571 12.3334 10.308 12.3334 9.66634C12.3334 9.02468 12.1051 8.47517 11.6486 8.01784C11.1912 7.56129 10.6417 7.33301 10.0001 7.33301C9.35841 7.33301 8.8093 7.56129 8.35275 8.01784C7.89541 8.47517 7.66675 9.02468 7.66675 9.66634C7.66675 10.308 7.89541 10.8571 8.35275 11.3137C8.8093 11.771 9.35841 11.9997 10.0001 11.9997ZM10.0001 20.5747C12.3723 18.3969 14.132 16.4182 15.2792 14.6387C16.4265 12.8599 17.0001 11.2802 17.0001 9.89968C17.0001 7.78023 16.3242 6.04462 14.9724 4.69284C13.6214 3.34184 11.964 2.66634 10.0001 2.66634C8.03619 2.66634 6.37836 3.34184 5.02658 4.69284C3.67558 6.04462 3.00008 7.78023 3.00008 9.89968C3.00008 11.2802 3.57369 12.8599 4.72091 14.6387C5.86814 16.4182 7.62786 18.3969 10.0001 20.5747ZM10.0001 23.2288C9.84452 23.2288 9.68897 23.1997 9.53341 23.1413C9.37786 23.083 9.24175 23.0052 9.12508 22.908C6.28619 20.3997 4.16675 18.0714 2.76675 15.9232C1.36675 13.7742 0.666748 11.7663 0.666748 9.89968C0.666748 6.98301 1.60514 4.6594 3.48191 2.92884C5.35791 1.19829 7.53064 0.333008 10.0001 0.333008C12.4695 0.333008 14.6422 1.19829 16.5182 2.92884C18.395 4.6594 19.3334 6.98301 19.3334 9.89968C19.3334 11.7663 18.6334 13.7742 17.2334 15.9232C15.8334 18.0714 13.714 20.3997 10.8751 22.908C10.7584 23.0052 10.6223 23.083 10.4667 23.1413C10.3112 23.1997 10.1556 23.2288 10.0001 23.2288Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Remote</span>
+          </div>
+          <div class="time-tag bordered d-flex align-items-center">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11.9883 0.333008C5.54825 0.333008 0.333252 5.55967 0.333252 11.9997C0.333252 18.4397 5.54825 23.6663 11.9883 23.6663C18.4399 23.6663 23.6666 18.4397 23.6666 11.9997C23.6666 5.55967 18.4399 0.333008 11.9883 0.333008ZM11.9999 21.333C6.84325 21.333 2.66659 17.1563 2.66659 11.9997C2.66659 6.84301 6.84325 2.66634 11.9999 2.66634C17.1566 2.66634 21.3333 6.84301 21.3333 11.9997C21.3333 17.1563 17.1566 21.333 11.9999 21.333Z" fill="#478BF9"/>
+              <path d="M12.5833 6.16699H10.8333V13.167L16.9583 16.842L17.8333 15.407L12.5833 12.292V6.16699Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Full-time</span>
+          </div>
+        </div>
+      </li>
+      <li class="card tinted thick-bordered d-flex flex-column">
+        <small class="d-block" data-marker="marketing">Marketing</small>
+        <h4>PPC Specialist Mobile App</h4>
+        <div class="d-flex mt-3">
+          <div class="location-tag bordered d-flex align-items-center me-3">
+            <svg width="20" height="24" viewBox="0 0 20 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.0001 11.9997C10.6417 11.9997 11.1912 11.771 11.6486 11.3137C12.1051 10.8571 12.3334 10.308 12.3334 9.66634C12.3334 9.02468 12.1051 8.47517 11.6486 8.01784C11.1912 7.56129 10.6417 7.33301 10.0001 7.33301C9.35841 7.33301 8.8093 7.56129 8.35275 8.01784C7.89541 8.47517 7.66675 9.02468 7.66675 9.66634C7.66675 10.308 7.89541 10.8571 8.35275 11.3137C8.8093 11.771 9.35841 11.9997 10.0001 11.9997ZM10.0001 20.5747C12.3723 18.3969 14.132 16.4182 15.2792 14.6387C16.4265 12.8599 17.0001 11.2802 17.0001 9.89968C17.0001 7.78023 16.3242 6.04462 14.9724 4.69284C13.6214 3.34184 11.964 2.66634 10.0001 2.66634C8.03619 2.66634 6.37836 3.34184 5.02658 4.69284C3.67558 6.04462 3.00008 7.78023 3.00008 9.89968C3.00008 11.2802 3.57369 12.8599 4.72091 14.6387C5.86814 16.4182 7.62786 18.3969 10.0001 20.5747ZM10.0001 23.2288C9.84452 23.2288 9.68897 23.1997 9.53341 23.1413C9.37786 23.083 9.24175 23.0052 9.12508 22.908C6.28619 20.3997 4.16675 18.0714 2.76675 15.9232C1.36675 13.7742 0.666748 11.7663 0.666748 9.89968C0.666748 6.98301 1.60514 4.6594 3.48191 2.92884C5.35791 1.19829 7.53064 0.333008 10.0001 0.333008C12.4695 0.333008 14.6422 1.19829 16.5182 2.92884C18.395 4.6594 19.3334 6.98301 19.3334 9.89968C19.3334 11.7663 18.6334 13.7742 17.2334 15.9232C15.8334 18.0714 13.714 20.3997 10.8751 22.908C10.7584 23.0052 10.6223 23.083 10.4667 23.1413C10.3112 23.1997 10.1556 23.2288 10.0001 23.2288Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Remote</span>
+          </div>
+          <div class="time-tag bordered d-flex align-items-center">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11.9883 0.333008C5.54825 0.333008 0.333252 5.55967 0.333252 11.9997C0.333252 18.4397 5.54825 23.6663 11.9883 23.6663C18.4399 23.6663 23.6666 18.4397 23.6666 11.9997C23.6666 5.55967 18.4399 0.333008 11.9883 0.333008ZM11.9999 21.333C6.84325 21.333 2.66659 17.1563 2.66659 11.9997C2.66659 6.84301 6.84325 2.66634 11.9999 2.66634C17.1566 2.66634 21.3333 6.84301 21.3333 11.9997C21.3333 17.1563 17.1566 21.333 11.9999 21.333Z" fill="#478BF9"/>
+              <path d="M12.5833 6.16699H10.8333V13.167L16.9583 16.842L17.8333 15.407L12.5833 12.292V6.16699Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Full-time</span>
+          </div>
+        </div>
+      </li>
+      <li class="card tinted thick-bordered d-flex flex-column">
+        <small class="d-block" data-marker="marketing">Marketing</small>
+        <h4>PPC Specialist Mobile App</h4>
+        <div class="d-flex mt-3">
+          <div class="location-tag bordered d-flex align-items-center me-3">
+            <svg width="20" height="24" viewBox="0 0 20 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M10.0001 11.9997C10.6417 11.9997 11.1912 11.771 11.6486 11.3137C12.1051 10.8571 12.3334 10.308 12.3334 9.66634C12.3334 9.02468 12.1051 8.47517 11.6486 8.01784C11.1912 7.56129 10.6417 7.33301 10.0001 7.33301C9.35841 7.33301 8.8093 7.56129 8.35275 8.01784C7.89541 8.47517 7.66675 9.02468 7.66675 9.66634C7.66675 10.308 7.89541 10.8571 8.35275 11.3137C8.8093 11.771 9.35841 11.9997 10.0001 11.9997ZM10.0001 20.5747C12.3723 18.3969 14.132 16.4182 15.2792 14.6387C16.4265 12.8599 17.0001 11.2802 17.0001 9.89968C17.0001 7.78023 16.3242 6.04462 14.9724 4.69284C13.6214 3.34184 11.964 2.66634 10.0001 2.66634C8.03619 2.66634 6.37836 3.34184 5.02658 4.69284C3.67558 6.04462 3.00008 7.78023 3.00008 9.89968C3.00008 11.2802 3.57369 12.8599 4.72091 14.6387C5.86814 16.4182 7.62786 18.3969 10.0001 20.5747ZM10.0001 23.2288C9.84452 23.2288 9.68897 23.1997 9.53341 23.1413C9.37786 23.083 9.24175 23.0052 9.12508 22.908C6.28619 20.3997 4.16675 18.0714 2.76675 15.9232C1.36675 13.7742 0.666748 11.7663 0.666748 9.89968C0.666748 6.98301 1.60514 4.6594 3.48191 2.92884C5.35791 1.19829 7.53064 0.333008 10.0001 0.333008C12.4695 0.333008 14.6422 1.19829 16.5182 2.92884C18.395 4.6594 19.3334 6.98301 19.3334 9.89968C19.3334 11.7663 18.6334 13.7742 17.2334 15.9232C15.8334 18.0714 13.714 20.3997 10.8751 22.908C10.7584 23.0052 10.6223 23.083 10.4667 23.1413C10.3112 23.1997 10.1556 23.2288 10.0001 23.2288Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Remote</span>
+          </div>
+          <div class="time-tag bordered d-flex align-items-center">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M11.9883 0.333008C5.54825 0.333008 0.333252 5.55967 0.333252 11.9997C0.333252 18.4397 5.54825 23.6663 11.9883 23.6663C18.4399 23.6663 23.6666 18.4397 23.6666 11.9997C23.6666 5.55967 18.4399 0.333008 11.9883 0.333008ZM11.9999 21.333C6.84325 21.333 2.66659 17.1563 2.66659 11.9997C2.66659 6.84301 6.84325 2.66634 11.9999 2.66634C17.1566 2.66634 21.3333 6.84301 21.3333 11.9997C21.3333 17.1563 17.1566 21.333 11.9999 21.333Z" fill="#478BF9"/>
+              <path d="M12.5833 6.16699H10.8333V13.167L16.9583 16.842L17.8333 15.407L12.5833 12.292V6.16699Z" fill="#478BF9"/>
+            </svg>
+            <span class="ms-2">Full-time</span>
+          </div>
+        </div>
+      </li>
+    </ul>
+  </div>
+</section>
+
+<section id="cv">
+  <div class="container">
+    <h2 class="text-center">There is no suitable vacancy?</h2>
+    <p class="text-center">Send us your CV and we will contact you.</p>
+    <div class="container">
+      <form action="#" class="thick-bordered my-5 py-5 w-100">
+        <div class="container d-flex flex-column align-items-center">
+          <div class="w-100">
+            <ul class="d-flex group justify-content-between">
+              <li>
+                <div class="input">
+                  <input placeholder="Your name..." type="text">
+                  <span>Name:</span>
+                </div>
+              </li>
+              <li>
+                <div class="input">
+                  <input placeholder="Your email..." type="email">
+                  <span>Email:</span>
+                </div>
+              </li>
+            </ul>
+            <div class="input textarea mt-3">
+              <textarea rows="4" placeholder="Tell us a little about yourself..." type="text" ></textarea>
+              <span>About yourself:</span>
+            </div>
+            <ul class="d-flex group justify-content-between mt-3">
+              <li>
+                <div class="input">
+                  <input placeholder="Select file" type="text">
+                  <span>Name:</span>
+                </div>
+              </li>
+              <li>
+                <div class="input">
+                  <button class="cta-btn w-100">Send CV</button>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </form>
+    </div>
   </div>
 </section>
 
