adaptive for careers & index

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
   <div class="container d-flex flex-column align-items-center">
     <h2>About us</h2>
     <p class="text-center">We are a direct advertiser and an online gambling affiliate program. MEGAPARTNERS guarantees the stability and reliability of all processes for our affiliates and players.</p>
-    <div class="d-flex flex-column flex-md-row">
+    <div class="d-flex flex-column flex-md-row align-items-center">
       <div class="d-none d-md-block me-3 svg">
         <object type="image/svg+xml" data="assets/icons/coins/megapartners.svg"></object>
       </div>
@@ -375,21 +375,21 @@
             <h4>Let’s start a conversation!</h4>
             <span>Would you like to start cooperation with MEGAPARTNERS in any field? Drop us a line!</span>
           </header>
-          <div class="mt-5">
-            <ul class="d-flex group justify-content-between">
-              <li>
+          <div class="mt-5 w-100">
+            <ul class="d-flex flex-column flex-md-row group justify-content-between">
+              <li class="mt-3 mt-md-0">
                 <div class="input">
                   <input placeholder="Your name..." type="text">
                   <span>Name:</span>
                 </div>
               </li>
-              <li>
+              <li class="mt-3 mt-md-0">
                 <div class="input">
                   <input placeholder="Your email..." type="email">
                   <span>Email:</span>
                 </div>
               </li>
-              <li>
+              <li class="mt-3 mt-md-0">
                 <div class="input">
                   <input placeholder="In progress..." type="text">
                   <span>In progress...:</span>
