news pages & adaptive, bug fixes

--- a/careers.html
+++ b/careers.html
@@ -150,12 +150,10 @@
 </section>
 
 <section id="positions">
+  <object class="bg circle" type="image/svg+xml" data="assets/backgrounds/careers_positions_circle.svg"></object>
   <div class="container">
-    <div class="title-bg">
-      <object class="bg circle" type="image/svg+xml" data="assets/backgrounds/careers_positions_circle.svg"></object>
-      <h2 class="text-center mb-5">Open positions</h2>
-    </div>
-    <ul class="filters thick-bordered d-flex group px-4 py-2">
+    <h2 class="text-center mb-5">Open positions</h2>
+    <ul class="filters thick-bordered d-flex group p-3">
       <li>
         <button class="btn" data-filter="all">View all</button>
       </li>
@@ -187,7 +185,7 @@
         </div>
       </li>
       <li class="card tinted thick-bordered d-flex flex-column">
-        <small class="d-block" data-marker="marketing">Marketing</small>
+        <small class="d-block" data-marker="it">IT</small>
         <h4>PPC Specialist Mobile App</h4>
         <div class="d-flex mt-3">
           <div class="location-tag bordered d-flex align-items-center me-3">
@@ -225,7 +223,7 @@
         </div>
       </li>
       <li class="card tinted thick-bordered d-flex flex-column">
-        <small class="d-block" data-marker="marketing">Marketing</small>
+        <small class="d-block" data-marker="it">IT</small>
         <h4>PPC Specialist Mobile App</h4>
         <div class="d-flex mt-3">
           <div class="location-tag bordered d-flex align-items-center me-3">
@@ -267,11 +265,9 @@
 </section>
 
 <section id="cv">
+  <object class="bg light" type="image/svg+xml" data="assets/backgrounds/commissions_cv_light.svg"></object>
   <div class="container">
-    <div class="title-bg">
-      <object class="bg light" type="image/svg+xml" data="assets/backgrounds/commissions_cv_light.svg"></object>
-      <h2 class="text-center">There is no suitable vacancy?</h2>
-    </div>
+    <h2 class="text-center">There is no suitable vacancy?</h2>
     <p class="text-center">Send us your CV and we will contact you.</p>
     <div class="container">
       <form action="#" class="thick-bordered my-5 py-5 w-100">
@@ -354,5 +350,7 @@
 </footer>
 
 <script src="index.js"></script>
+<script src="lib/Filter.js"></script>
+<script src="js/careers.js"></script>
 </body>
 </html>
