remove bottom sidebar content from desktop

--- a/news[id].html
+++ b/news[id].html
@@ -115,7 +115,7 @@
       <p>
         Visitors can <a href="#">book a meeting</a> with the team on stand N8-120 at ExCel London to explore the opportunities MEGAPARTNERS has to offer as an innovative and player-driven content provider for the iGaming Industry.
       </p>
-      <div class="share-panel mt-3">
+      <div class="d-md-none d-block share-panel mt-3">
         <small>Share this article:</small>
         <ul class="d-flex mt-2">
           <li class="copy-to-clipboard me-2">
@@ -150,7 +150,7 @@
           </li>
         </ul>
       </div>
-      <form action="" class="subscribe-form d-flex flex-column p-4 bordered mt-4">
+      <form action="" class="d-md-none subscribe-form d-flex flex-column p-4 bordered mt-4">
         <header><h5 class="mb-3 text-center">Subscribe megapartners news</h5></header>
         <div class="input">
           <input placeholder="Your email..." type="email">
