--- a/news[id].html
+++ b/news[id].html
@@ -5,11 +5,11 @@
   <meta name="viewport"
         content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/pages/single_news.css">
-  <link rel="stylesheet" href="lib/splide/dist/css/splide.min.css">
-  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-grid.css">
-  <link rel="stylesheet" href="lib/bootstrap/css/bootstrap-grid.min.css">
+  <link rel="stylesheet preload" href="css/index.css">
+  <link rel="stylesheet preload" href="css/pages/single_news.css">
+  <link rel="stylesheet preload" href="lib/splide/dist/css/splide.min.css">
+  <link rel="stylesheet preload" href="lib/bootstrap/css/bootstrap-grid.css">
+  <link rel="stylesheet preload" href="lib/bootstrap/css/bootstrap-grid.min.css">
   <title>Megapartners | News single page</title>
 </head>
 <body>
