add filters to commissions

--- a/index.html
+++ b/index.html
@@ -458,5 +458,6 @@
 <script src="index.js"></script>
 <script src="lib/Filter.js"></script>
 <script src="js/home.js"></script>
+<script src="lib/accordion.js"></script>
 </body>
 </html>
