fix coins markup

--- a/brand-guide.html
+++ b/brand-guide.html
@@ -249,14 +249,14 @@
           <h2>Additional ID Elements</h2>
           <h3 class="mt-4">3.1. Icons</h3>
           <span class="d-block mt-3">Game icons: Dollar, timer, shield, crown, as well as the “M” icon from the MEGAPARTNERS logo are used as additional identification elements.</span>
-          <div class="coins mt-4">
-            <ul class="d-flex justify-content-between">
+          <div class="d-flex flex-column align-items-center coins mt-4">
+            <ul class="d-flex justify-content-between w-100">
               <li><object data="assets/icons/coins/ball.svg" type="image/svg+xml"></object></li>
               <li><object data="assets/icons/coins/globe.svg" type="image/svg+xml"></object></li>
               <li><object data="assets/icons/coins/dollar.svg" type="image/svg+xml"></object></li>
               <li><object data="assets/icons/coins/dollar.svg" type="image/svg+xml"></object></li>
             </ul>
-            <ul class="d-flex justify-content-around">
+            <ul class="d-flex justify-content-around" style="width: 85%">
               <li><object data="assets/icons/coins/clock.svg" type="image/svg+xml"></object></li>
               <li><object data="assets/icons/coins/mp.svg" type="image/svg+xml"></object></li>
               <li><object data="assets/icons/coins/shield.svg" type="image/svg+xml"></object></li>
